--- a/src/components/home/Images.scss
+++ b/src/components/home/Images.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables';
+@use '../../styles/variables' as vars;
 
 .gallery {
   margin: 2rem auto;
@@ -6,15 +6,15 @@
 
   &__title {
     margin: 2rem;
-    font-family: $font-secondary;
+    font-family: vars.$font-secondary;
     font-size: 2rem;
-    color: $color-primary;
+    color: vars.$color-primary;
     text-align: center;
   }
 
   &__image {
     width: 95%;
-    margin:0 auto;
+    margin: 0 auto;
     height: auto;
     padding: 0.3rem;
     box-sizing: border-box;
@@ -30,6 +30,6 @@
 
 @media screen and (min-width: 1440px) {
   .gallery {
-    width: 60%;   
+    width: 60%;
   }
 }
