--- a/src/components/home/Testimonials.scss
+++ b/src/components/home/Testimonials.scss
@@ -1,10 +1,9 @@
-/* Testimonials.scss */
-@import "../../styles/variables";
-@import "../../styles/mixins";
+@use "../../styles/variables" as vars;
+@use "../../styles/mixins" as mixins;
 
 .testimonials {
   padding: 40px 20px;
-  background-color: $color-background;
+  background-color: vars.$color-background;
   text-align: center;
 
   &__container {
@@ -15,18 +14,18 @@
   &__title {
     font-size: 2rem;
     margin: 2rem;
-    color: $color-primary;
-    font-family: $font-secondary;
+    color: vars.$color-primary;
+    font-family: vars.$font-secondary;
   }
 
   &__carousel {
     margin-bottom: 40px;
 
     .testimonial {
-      background-color: $color-background;
+      background-color: vars.$color-background;
       padding: 20px;
       border-radius: 10px;
-      transition: $transition-default;
+      transition: vars.$transition-default;
 
       &__header {
         display: flex;
@@ -45,13 +44,13 @@
 
           .testimonial__name {
             font-size: 1.2rem;
-            color: $color-secondary;
+            color: vars.$color-secondary;
             margin-bottom: 5px;
-            font-family: $font-secondary;
+            font-family: vars.$font-secondary;
           }
 
           .testimonial__stars {
-            color: $color-accent;
+            color: vars.$color-accent;
 
             i {
               margin-right: 2px;
@@ -62,9 +61,9 @@
 
       &__review {
         font-size: calc(0.8rem + 0.5vw);
-        color: $color-primary;
+        color: vars.$color-primary;
         line-height: 1.4;
-        font-family: $font-primary;
+        font-family: vars.$font-primary;
       }
 
       &:hover {
@@ -77,7 +76,7 @@
     margin-top: 20px;
 
     .testimonials__button {
-      @include button-styles;
+      @include mixins.button-styles;
     }
   }
 }
